# cuda

./: CMakeLists.txt
cublas/: CMakeLists.txt
cublas/MyExample/: CMakeLists.txt  MyExample.cpp
cublas/SimpleExample/: CMakeLists.txt  SimpleExample.cpp
cublas/SimpleExample2/: CMakeLists.txt  SimpleExample2.cpp
examples/: CMakeLists.txt
examples/seqAsync/: CMakeLists.txt  seqAsync.cu
examples/seqCuda/: CMakeLists.txt  seqCuda.cu
examples/seqRuntime/: CMakeLists.txt  seqRuntime.cu
examples/seqSerial/: CMakeLists.txt  seqSerial.cpp
examples/xorNM/: CMakeLists.txt  CalcError.hpp  nelmin.hpp  xorNM.cu
openmp/: CMakeLists.txt  testOpenmp.cpp
