file(GLOB SIMPLEEXAMPLE_FILES "*.hpp" "*.cpp")
add_executable(SimpleExample ${SIMPLEEXAMPLE_FILES})
target_link_libraries(SimpleExample ${CUDA_LIBRARY_DIR}/cublas.lib)
target_link_libraries(SimpleExample ${CUDA_LIBRARY_DIR}/cuda.lib)
target_link_libraries(SimpleExample ${CUDA_LIBRARY_DIR}/cudart.lib)